--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,13 @@ Django==4.2.7
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 django-cors-headers==4.3.1
-django-filter==23.3
+channels==4.0.0
+django-meta==2.5.0
 
 # Image processing
 Pillow>=9.0.0
 
 # WebSocket and real-time
-channels==4.0.0
 channels-redis==4.1.0
 daphne==4.0.0
 redis==5.0.1
@@ -19,7 +19,7 @@ celery==5.3.4
 django-celery-beat==2.5.0
 django-celery-results==2.6.0
 
-# Environment and configuration
+# Environment variables
 python-decouple==3.8
 
 # Development tools
@@ -28,8 +28,8 @@ django-extensions==3.2.3
 # System monitoring
 psutil==5.9.6
 
-# Database (use SQLite for development, PostgreSQL for production)
-psycopg2-binary==2.9.9
+# Database
+psycopg2-binary==2.9.10
 
 # File storage (optional for development)
 django-storages==1.14.2
@@ -44,4 +44,6 @@ flake8==6.1.0
 black==23.11.0
 isort==5.12.0
 bandit==1.7.5
-safety==2.3.5
+
+# Payment processing
+stripe==7.8.0
