--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Docker
+/docker-compose.yml
+/docker-compose.*.yml
+/.docker/
+*.env
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
